Fix spacing on investments list

--- a/Coronado.Web/ClientApp/src/components/investments_page/InvestmentList.css
+++ b/Coronado.Web/ClientApp/src/components/investments_page/InvestmentList.css
@@ -1,5 +1,5 @@
 ﻿.investment-list th:first-child {
-    width:110px;
+    width:130px;
 }
 .investment-list th:last-child, .investment-list td:last-child {
   text-align: right;
